fixing: - cut title while sidebar is collapsed - moving styling from .css file to custom skin function

--- a/inst/www/styles.css
+++ b/inst/www/styles.css
@@ -1,7 +1,8 @@
+/*
 body {
   overflow-y: hidden;
 }
-
+*/
 .wrapper {
   overflow-y: auto;
   height: 100vh;
@@ -9,41 +10,6 @@ body {
 
 .wrapper::-webkit-scrollbar{
   display: none;
-}
-
-.cb_panel {
-  position: sticky;
-  top: 0;
-  z-index: 999;
-  padding-bottom: 3px;
-  padding-top: 1px;
-  padding-right: 5px;
-  padding-left: 5px;
-  background-color: #047378;
-}
-
-
-#controlbar {
-  background-color: #047378;
-  display: block !important;
-}
-
-
-#controlbar .cb_steps {
-  padding: 0 5px 0 5px;
-  color: #3C4048;
-}
-
-
-#controlbar .cb_panel > .scb_button {
-    background-color: #035357;
-    color: #fff;
-    border: 0;
-    margin-top: 3px;
-}
-
-#controlbar .cb_panel > .scb_button:hover {
-    background-color: #3C4048;
 }
 
 /*
